<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context="com.loginscreen.UserRegisterActivity">

    <TextView
        android:id="@+id/reg_confirm_pass_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/l_red"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/reg_con_password"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/reg_con_password"
        app:layout_constraintTop_toBottomOf="@+id/reg_con_password" />

    <TextView
        android:id="@+id/reg_pass_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/l_red"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <TextView
        android:id="@+id/reg_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/l_red"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="209dp"
        android:layout_height="51dp"
        android:text="Registration"
        android:textAlignment="center"
        android:textColor="@color/medium_blue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/vec_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/medium_blue"
        android:textColorHighlight="@color/light_blue"
        android:textColorHint="@color/medium_blue"
        android:textColorLink="@color/medium_blue"
        app:layout_constraintEnd_toEndOf="@+id/reg_displayname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reg_displayname"
        app:layout_constraintTop_toBottomOf="@+id/reg_displayname" />

    <EditText
        android:id="@+id/reg_displayname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/vec_profile"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Display Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/medium_blue"
        android:textColorHighlight="@color/light_blue"
        android:textColorHint="@color/medium_blue"
        android:textColorLink="@color/medium_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/vec_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/medium_blue"
        android:textColorHighlight="@color/light_blue"
        android:textColorHint="@color/medium_blue"
        android:textColorLink="@color/medium_blue"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <EditText
        android:id="@+id/reg_con_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/vec_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/medium_blue"
        android:textColorHighlight="@color/light_blue"
        android:textColorHint="@color/medium_blue"
        android:textColorLink="@color/medium_blue"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/white"
        android:text="Register"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/reg_con_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reg_con_password"
        app:layout_constraintTop_toBottomOf="@+id/reg_con_password" />

    <TextView
        android:id="@+id/text_account_exists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Already have an account? Sign in here!"
        android:textColor="@color/medium_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/reg_button"
        app:layout_constraintStart_toStartOf="@+id/reg_button"
        app:layout_constraintTop_toBottomOf="@+id/reg_button" />

    <TextView
        android:id="@+id/reg_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/l_red"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/reg_displayname"
        app:layout_constraintStart_toStartOf="@+id/reg_displayname"
        app:layout_constraintTop_toBottomOf="@+id/reg_displayname" />

    <TextView
        android:id="@+id/reg_email_exists_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/l_red"
        app:layout_constraintEnd_toEndOf="@+id/reg_button"
        app:layout_constraintStart_toStartOf="@+id/reg_button"
        app:layout_constraintTop_toBottomOf="@+id/reg_button" />
</androidx.constraintlayout.widget.ConstraintLayout>