<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".app.User">

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:background="@drawable/user_default_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/friends_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:background="@drawable/friends_image"
        app:layout_constraintStart_toEndOf="@+id/profile_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="203dp"
        android:layout_height="44dp"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:text="@string/welcome_dash"
        android:textColor="@color/dark_blue"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/friends_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/friends_button"
        app:layout_constraintTop_toTopOf="@+id/friends_button" />

    <Button
        android:id="@+id/private_button"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:gravity="bottom"
        android:text="Private Notes"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/new_guild_button"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:gravity="bottom|center"
        android:text="New Guild"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/private_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@+id/private_button"
        app:layout_constraintStart_toStartOf="@+id/private_button"
        app:layout_constraintTop_toTopOf="@+id/private_button"
        app:srcCompat="@drawable/user_no_ring_image" />


    <ImageView
        android:id="@+id/add_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="@+id/new_guild_button"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/new_guild_button"
        app:layout_constraintTop_toTopOf="@+id/new_guild_button"
        app:srcCompat="@drawable/plus_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friends_button"
        tools:ignore="MissingConstraints">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/server_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friends_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>